--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,9 @@
 <h2>Sign up</h2>
 
 <%= semantic_form_for @user do |form| %>
-  <%= form.error_messages %>
-  <%= render :partial => "/users/inputs", :locals => { :form => form } %>
+  <%= form.semantic_errors %>
+  <%= render :partial => '/users/inputs', :locals => { :form => form } %>
   <%= form.buttons do %>
-    <%= form.commit_button "Sign up" %>
+    <%= form.commit_button 'Sign up' %>
   <% end %>
 <% end %>
-
