--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cobook</title>
-  <%= stylesheet_link_tag :all %>
+  <title>coBook!</title>
+  <%= stylesheet_link_tag 'styles' %>
   <%= formtastic_stylesheet_link_tag %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+    <div class="header">
+      <h1><a href="/">coBook!</a></h1>
+    </div>
+    <div class="body">
+      <%= yield %>
+    </div>
+    <div class="footer">
+      &copy; 2010 by adwo.
+    </div>
 </body>
 </html>
