--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     </div>
     <div class="body">
       <h2><%= title :detail %></h2>
+      <% flash.each do |name, msg| %>
+         <%= content_tag :div, msg, :class => "flash #{name}" %>
+       <% end %> 
       <%= yield %>
     </div>
     <div class="footer">
