--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,21 +1,18 @@
-<h2>Change your password</h2>
+<% @title = 'Change your password' %>
 
-<p>
-  Your password has been reset. Choose a new password below.
-</p>
+<p>Your password has been reset. Choose a new password below.</p>
 
-<%= semantic_form_for(:user,
-            :url  => user_password_path(@user, :token => @user.confirmation_token),
-            :html => { :method => :put }) do |form| %>
-  <%= form.error_messages %>
-  <%= form.inputs do -%>
-    <%= form.input :password, :as => :password,
-                   :label => "Choose password" %>
+<%= semantic_form_for(
+  :user, 
+  :url  => user_password_path(@user, :token => @user.confirmation_token), 
+  :html => { :method => :put }) do |form| %>
+  <%= form.semantic_errors %>
+  <%= form.inputs do %>
+    <%= form.input :password, :as => :password, :label => 'Choose password' %>
     <%= form.input :password_confirmation, :as => :password,
-                   :label => "Confirm password" %>
-  <% end -%>
-  <%= form.buttons do -%>
-    <%= form.commit_button "Save this password" %>
-  <% end -%>
+                   :label => 'Confirm password' %>
+  <% end %>
+  <%= form.buttons do %>
+    <%= form.commit_button 'Save this password' %>
+  <% end %>
 <% end %>
-
