header menu added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   <div class="container">
     <div class="header">
       <h1><a href="/">coBook!</a></h1>
+      <ul class="hmenu">
+      <% if signed_in? %>
+        <li><%= link_to 'My contacts', contacts_path %></li>
+        <li><%= link_to 'Sign out', sign_out_path %></li>
+      <% else %>
+        <li><%= link_to 'Sign in', sign_in_path %></li>
+      <% end %>
+      </ul>
     </div>
     <div class="body">
       <h2><%= title :detail %></h2>
