--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
   <title><%= title %> - coBook!</title>
   <%= stylesheet_link_tag 'styles' %>
   <%= formtastic_stylesheet_link_tag %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'prototype' %>
+  <%= javascript_include_tag 'rails' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
