--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
         <li><%= link_to 'My contacts', contacts_path %></li>
         <li><%= link_to 'Sign out', sign_out_path, :method => :delete %></li>
       <% else %>
-        <li><%= link_to 'Sign in', sign_in_path %></li>
+        <li><%= link_to 'Sign In', sign_in_path %></li>
+        <li><%= link_to 'Sign Up', sign_up_path %></li>
       <% end %>
       <li><%= link_to 'About', about_path %></li>
       </ul>
