new group form added

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,1 +1,11 @@
 <% @title = 'New group' %>
+
+<%= semantic_form_for @group do |form| %>
+  <%= form.semantic_errors %>
+  <%= form.inputs do %>
+    <%= form.input :name %>
+  <% end %>
+  <%= form.buttons do %>
+    <%= form.commit_button 'Create' %>
+  <% end %>
+<% end %>
