p wrapper for new group link added

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <% @title = 'Groups' %>
 
-<%= link_to 'New group', new_group_path %>
+<p><%= link_to 'New group', new_group_path %></p>
 
 <ul class="groups">
 <% @groups.each do |group| %>
