new contact form added

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,14 @@
 <% @title = "New contact in group \"#{@group.name}\"" %>
+
+<%= semantic_form_for [@group, @contact] do |form| %>
+  <%= form.semantic_errors %>
+  <%= form.inputs do %>
+    <%= form.input :name %>
+    <%= form.input :phone %>
+    <%= form.input :gender, :as => :select, :collection => [['Male', 'm'], ['Female', 'f']] %>
+    <%= form.input :photo %>
+  <% end %>
+  <%= form.buttons do %>
+    <%= form.commit_button 'Create' %>
+  <% end %>
+<% end %>
