--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,6 +4,6 @@
 
 <ul class="groups">
 <% @groups.each do |group| %>
-  <li><%= link_to group.name, group %></li>
+  <li><%= link_to group.name, group_contacts_path(group) %></li>
 <% end %>
 </ul>
