--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -67,7 +67,7 @@ h2 {
   border: 2px solid #ddd;
 }
 
-.flash.error, .flash.failure {
+.flash.error, .flash.failure, .flash.alert {
   background: #FBE3E4;
   color: #8a1f11;
   border-color: #FBC2C4;
@@ -91,4 +91,8 @@ li.required label {
 
 .contact-info {
   margin-top: 20px;
+}
+
+p.actions a {
+  margin-right: 5px
 }
