--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,6 +1,9 @@
 <% @title = "#{@contact.name} / #{@group.name}" %>
 
-<p><%= link_to 'Back to contacts list', group_contacts_path(@group) %></p>
+<p class="actions">
+  <%= link_to 'Back to contacts list', group_contacts_path(@group) %>
+  <%= link_to 'Edit contact', edit_group_contact_path(@group, @contact) %>
+</p>
 
 <%= image_tag @contact.photo.url(:normal) %>
 
